started styling on landing page and created start game button

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Met tags for search engines -->
+    <meta name="description" content="Rock, Paper and Scissors game">
+    <meta name="keywords" content="rock, paper, scissors, game, Rock paper scissors online, Rock-paper-scissors">
+    <!-- Title -->
+    <title>Rock, Paper & Scissors</title>
+    <!-- Favicon -->
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
 </head>
+
 <body>
+    <section>
+        <div id="main-heading">
+            <h1>Rock, Paper & Scissors</h1>
+        </div>
+        <div id="start-game-btn">
+            <a href="game.html">
+                <button class="start-game">Start Game!</button>
+            </a>
+        </div>
+    </section>
+
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
