--- a/game.html
+++ b/game.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Met tags for search engines -->
+    <meta name="description" content="Rock, Paper and Scissors game">
+    <meta name="keywords" content="rock, paper, scissors, game, Rock paper scissors online, Rock-paper-scissors">
+    <!-- Title -->
+    <title>Rock, Paper & Scissors</title>
+    <!-- Favicon -->
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <h1>test</h1>
+
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
