--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 </head>
 
 <body>
-    <section>
+    <header>
         <div id="main-heading">
             <h1>Rock, Paper & Scissors</h1>
         </div>
+    </header>
+    <section>
         <div id="start-game-btn">
             <a href="game.html">
                 <button class="start-game">Start Game!</button>
