added id to game section

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
             <h1>Rock, Paper & Scissors</h1>
         </div>
     </header>
-    <section>
+    <section id="the-game">
         <br>
         <div id="choices">
             <p></p>
