removed landing page and added media query for game page

--- a/game.html
+++ b/game.html
@@ -33,7 +33,7 @@
         </div>
         <br>
         <div id="user">
-            <img src="assets/images/RPS.png" alt="Rock, Paper & Scissors" id="rps-image-one">
+            <img src="assets/images/rock-paper-scissors.webp" alt="Rock, Paper & Scissors" id="rps-image-one">
         </div>
         <br>
         <div id="current-score">
@@ -42,12 +42,12 @@
         </div>
         <br>
         <div id="computer">
-            <img src="assets/images/RPS.png" alt="Rock, Paper & Scissors" id="rps-image-two">
+            <img src="assets/images/rock-paper-scissors.webp" alt="Rock, Paper & Scissors" id="rps-image-two">
         </div>
 
     </section>
 
-    <footer id="game-rules">
+    <footer>
         <div>
             <p>Rules - Rock breaks scissors - scissors cuts paper - paper covers rock</p>
         </div>
