added further section to HTML to split choices and the game itself

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Rock, Paper & Scissors</h1>
         </div>
     </header>
-    <section id="the-game">
+    <section id="game-choices">
         <br>
         <div id="choices">
             <p></p>
@@ -31,7 +31,9 @@
             <button aria-label="Scissors" data-choice="2" class="choice-btn">Scissors</button>
             <button class="choice-btn">Reset</button>
         </div>
+        </section>
         <br>
+        <section id="the-game">
         <div id="user">
             <img src="assets/images/rock-paper-scissors.webp" alt="Rock, Paper & Scissors" id="rps-image-one">
         </div>
