--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             <img src="assets/images/rock-paper-scissors.webp" alt="Rock, Paper & Scissors" id="rps-image-one">
         </div>
         <br>
-        <div id="current-score">
+        <div id="current-score-user">
             <h3>You're Score: <span>0</span></h3>
+            </div>
+            <div id="current-score-computer">
             <h3>Computer Score: <span>0</span></h3>
         </div>
         <br>
