added styles to 1920 media query image placement

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <br>
         <div id="current-score-user">
-            <h3>You're Score: <span>0</span></h3>
+            <h3>Your Score: <span>0</span></h3>
         </div>
         <div id="game-message">
             <h1>Message</h1>
@@ -59,7 +59,7 @@
 <!-- Game rules -->
     <footer>
         <div>
-            <p>Rules - Rock breaks scissors - scissors cuts paper - paper covers rock</p>
+            <p>Rules - Rock breaks scissors - Scissors cuts paper - Paper covers rock</p>
         </div>
     </footer>
 
