--- a/index.html
+++ b/index.html
@@ -24,6 +24,28 @@
         </div>
     </header>
     <!-- Game area -->
+    <br>
+    <section id="the-game">
+        <div id="user">
+            <img src="assets/images/rock-paper-scissors.webp" alt="Rock, Paper & Scissors" id="rps-image-one">
+        </div>
+        <br>
+        <div id="current-score-computer">
+            <h3>Computer Score: <span>0</span></h3>
+        </div>
+        <div id="game-message">
+            <h1>Message</h1>
+        </div>
+        <br>
+        <div id="current-score-user">
+            <h3>Your Score: <span>0</span></h3>
+        </div>
+        <br>
+        <div id="computer">
+            <img src="assets/images/rock-paper-scissors.webp" alt="Rock, Paper & Scissors" id="rps-image-two">
+        </div>
+
+    </section>
     <section id="game-choices">
         <br>
         <div id="choices">
@@ -31,30 +53,10 @@
             <button aria-label="Rock" data-choice="0" class="choice-btn">Rock</button>
             <button aria-label="Paper" data-choice="1" class="choice-btn">Paper</button>
             <button aria-label="Scissors" data-choice="2" class="choice-btn">Scissors</button>
-            <button class="choice-btn">Reset</button>
         </div>
-    </section>
-    <br>
-    <section id="the-game">
-        <div id="user">
-            <img src="assets/images/rock-paper-scissors.webp" alt="Rock, Paper & Scissors" id="rps-image-one">
+        <div id="reset-game">
+            <button class="reset-btn">Reset</button>
         </div>
-        <br>
-        <div id="current-score-user">
-            <h3>Your Score: <span>0</span></h3>
-        </div>
-        <div id="game-message">
-            <h1>Message</h1>
-        </div>
-        <br>
-        <div id="current-score-computer">
-            <h3>Computer Score: <span>0</span></h3>
-        </div>
-        <br>
-        <div id="computer">
-            <img src="assets/images/rock-paper-scissors.webp" alt="Rock, Paper & Scissors" id="rps-image-two">
-        </div>
-
     </section>
 <!-- Game rules -->
     <footer>
