added constants for game and added notes to structure my approach

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </div>
         <br>
         <div id="current-score-computer">
-            <h3>Computer Score: <span>0</span></h3>
+            <h3>Computer Score: <span id="computer-score">0</span></h3>
         </div>
         <div id="game-message">
             <h1>Message</h1>
         </div>
         <br>
         <div id="current-score-user">
-            <h3>Your Score: <span>0</span></h3>
+            <h3>Your Score: <span id="user-score">0</span></h3>
         </div>
         <br>
         <div id="computer">
