added javascript to reset score and added start game button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <div id="reset-game">
             <button class="reset-btn">Reset</button>
         </div>
+        <div id="start-game">
+            <button class="start-btn">Start!</button>
+        </div>
     </section>
 <!-- Game rules -->
     <footer>
