added styles to landing page

--- a/game-page.html
+++ b/game-page.html
@@ -54,6 +54,7 @@
         </div>
         <div id="game-buttons">
             <button class="reset-btn">Reset</button>
+            <button><a href="index.html" class="button"></a>Home</button>
         </div>
     </section>
 <!-- Game rules -->
