--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
 </head>
 
 <body>
-    <header>
+    <header class="lp-heading-main">
         <div id="lp-heading">
             <h1>Rock, Paper & Scissors</h1>
         </div>
     </header>
     <section id="game-start">
-      <div>
-        <button class="start-btn">Start!</button>
-      </div>
+        <div id="start-game-heading">
+            <h2>Start New Game!</h2>
+        </div>
+        <div class="button-start">
+            <a href="game-page.html" class="link-one">
+                <button class="start-button">Start</button>
+            </a>
+        </div>
     </section>
-<!-- Game rules -->
+    <!-- Game rules -->
     <footer>
         <div>
             <p>Rules - Rock breaks scissors - Scissors cuts paper - Paper covers rock</p>
