--- a/game-page.html
+++ b/game-page.html
@@ -54,7 +54,7 @@
         </div>
         <div id="game-buttons">
             <button class="reset-btn">Reset</button>
-            <button><a href="index.html" class="button"></a>Home</button>
+            <button class="home-btn" onclick="location.href='index.html'">Home</button>
         </div>
     </section>
 <!-- Game rules -->
