fixed styles on mobile view and added possible background color changes - commented out while testing

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </section>
     <!-- Game rules -->
     <footer>
-        <div>
-            <p>Rules - Rock breaks scissors - Scissors cuts paper - Paper covers rock</p>
+        <div id="creator">
+            <p>Game created by - Sean Patton</p>
         </div>
     </footer>
 
