fixed styling issues on tablet view

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <button aria-label="Paper" data-choice="1" class="choice-btn">Paper</button>
             <button aria-label="Scissors" data-choice="2" class="choice-btn">Scissors</button>
         </div>
-        <div id="game-buttons">
+        <div id="reset">
             <button class="reset-btn">Reset</button>
         </div>
     </section>
