added content to README and added ! to the buttons

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <p>Make your choice:</p>
         </div>
         <div id="choices">
-            <button aria-label="Rock" data-choice="0" class="choice-btn">Rock</button>
-            <button aria-label="Paper" data-choice="1" class="choice-btn">Paper</button>
-            <button aria-label="Scissors" data-choice="2" class="choice-btn">Scissors</button>
+            <button aria-label="Rock" data-choice="0" class="choice-btn">Rock!</button>
+            <button aria-label="Paper" data-choice="1" class="choice-btn">Paper!</button>
+            <button aria-label="Scissors" data-choice="2" class="choice-btn">Scissors!</button>
         </div>
         <div id="reset">
             <button class="reset-btn">Reset</button>
