added images to readme

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="game-choices">
         <br>
         <div id="choice-statement">
-            <p>Make your choice:</p>
+            <h3>Make your choice:</h3>
         </div>
         <div id="choices">
             <button aria-label="Rock" data-choice="0" class="choice-btn">Rock!</button>
