--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
 
     </section>
+<!-- Game choice and reset game section --> 
     <section id="game-choices">
         <br>
         <div id="choice-statement">
@@ -56,7 +57,7 @@
             <button class="reset-btn">Reset</button>
         </div>
     </section>
-<!-- Game rules -->
+<!-- Game rules/footer -->
     <footer>
         <div>
             <p>Rules - Rock breaks scissors - Scissors cuts paper - Paper covers rock</p>
